# NetworkHydraulic

./: .gitignore  AGENTS.md  CONTRIBUTING.md  GEMINI.md  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  run_valve_optimizer.py  sophisticated_gas_flow_convergence.py  unit_with_pint.py
backend/: README.md  config.py  database.py  exceptions.py  integration.py  main.py  models.py  requirements.txt  simple_api.py  tasks.py  templates.py  websocket.py
backend/routers/: calculation_router.py  configuration_router.py  history_router.py  results_router.py  websocket_router.py
backend/tests/: test_basic.py
config/: butene_1.yaml  butene_1_result.yaml  fittings_skeleton.yaml  gas_network.yaml  multi_network_example.yaml  network-2.yaml  network-2.yml  real_network.yaml  sample_network.json  sample_network.yaml  sample_results.yaml  test_k_safety_factor.yaml  test_valve_network.yaml
docs/: configuration_reference.md  react_app_design.md  user_manual.md
examples/: basic_run.py  basic_run_system.py  output.yaml
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
scripts/: update_all_snapshots.py  update_snapshot.py
tests/: test_skeleton.py
tests/io/: test_loader.py  (+1 more)
webapp/: .dockerignore  .env.example  .eslintrc.json  .prettierignore  .prettierrc.json  Dockerfile  README.md  cypress.config.ts  default.conf  docker-compose.yml  docker-entrypoint.sh  health-check.sh  jest.config.js  netlify.toml  nginx.conf  nginx.prod.conf  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
(+284 files in other folders)
